<resources>
    <string name="app_name">Colenak</string>
    <string name="fontmedium">sans-serif-medium</string>
    <string name="fontblack">sans-serif-black</string>

    <string name="app_name_caps"> COLENAK</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">Project Akhir</string>
    <string name="backdrop_subtitle">Aplikasi pembantu rekreasi Anda!</string>
    <string name="btn_logout_from_google">Keluar Akun</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="find">Cari Rute</string>
    <string name="filter">Cari Wisata</string>

    <string name="galeri">Galeri Wisata </string>
    <string name="nama">Nama Wisata </string>
    <string name="lokasi">Lokasi </string>
    <string name="telp">Telepon </string>
    <string name="jam">Jam Buka </string>
    <string name="harga">Harga Tiket </string>
    <string name="deskripsi">Deskripsi Wisata </string>
    <string name="maps">Buka dalam Maps</string>
    <string name="title_activity_maps">Map</string>

    <string name="name_id">Name ID</string>
    <string name="email_id">Email ID</string>
    
    <string name="jam_lalin">
        Jumat Tutup\n
        Sabtu 08.00–16.00\n
        Minggu 08.00–16.00\n
        Senin 08.00–15.00\n
        Selasa 08.00–15.00\n
        Rabu 08.00–15.00\n
        Kamis 08.00–15.00\n
    </string>
    <string name="harga_lalin">
        Karcis Masuk hari libur/minggu (10% disc)	Rp.7000\n
        Karcis Masuk hari biasa (10%disc)	Rp.6000\n
        Kereta api	Rp.5000\n
        Kerosel	Rp.5000\n
        Kolam renang	Rp.6000\n
        Pelampung	Rp.2000\n
        Kolam pancing	Rp.5000\n
        Sepeda mini	Rp.5000\n
        Triker	Rp.5000\n
        Kereta motor	Rp.5000\n
        Koin /AMA	Rp.2000\n
        Sewa gedung PPKLL	Rp.2.500.000,- s/d 3.500.000\n
        Sewa panggung terbuka	Rp.300.000\n
    </string>
    <string name="jam_library">
        Jumat	09.30–16.00\n
        Sabtu	09.30–16.00\n
        Minggu	Tutup\n
        Senin	Tutup\n
        Selasa	09.30–16.00\n
        Rabu	09.30–16.00\n
        Kamis	09.30–16.00\n
    </string>
    <string name="jam_bsc">
        Jumat	09.00–17.00\n
        Sabtu	09.00–17.00\n
        Minggu	09.00–17.00\n
        Senin	Tutup\n
        Selasa	09.00–17.00\n
        Rabu	09.00–17.00\n
        Kamis	09.00–17.00\n
    </string>
</resources>
