<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.rizki.talentbdgproject.activity.ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.rizki.talentbdgproject.classes.CustomTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="80dp"
                android:text="@string/app_name_caps"
                android:textSize="25sp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_below="@+id/toolbar3"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:src="@drawable/foto" />

            <com.example.rizki.talentbdgproject.classes.CustomTextView
                android:id="@+id/namaID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_below="@+id/pp"
                android:layout_centerHorizontal="true"
                android:text="@string/name_id" />

            <com.example.rizki.talentbdgproject.classes.CustomTextView
                android:id="@+id/emailID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_below="@+id/namaID"
                android:layout_centerHorizontal="true"
                android:text="@string/email_id" />

            <Button
                android:id="@+id/btnLogout"
                android:text="@string/btn_logout_from_google"
                android:layout_below="@+id/emailID"
                android:background="@color/colorPrimaryDark"
                android:layout_centerHorizontal="true"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
