<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.rizki.talentbdgproject.activity.MainActivity">

    <SearchView
        android:id="@+id/search_view"
        android:layout_below="@+id/toolbar2"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:focusable="false"
        android:iconifiedByDefault="false"
        android:queryHint="@string/filter"
        android:layout_height="50dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_below="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.rizki.talentbdgproject.classes.CustomTextView
                android:id="@+id/title"
                android:text="@string/app_name_caps"
                android:textSize="30sp"
                android:fontFamily="@string/fontmedium"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/profile1"
                android:src="@drawable/foto"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_alignParentRight="true"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:maxHeight="40dp"
                android:maxWidth="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

</RelativeLayout>